# appdirs-rs

./: Cargo.toml  README.rst  appveyor.yml
src/: lib.rs  macos.rs  unix.rs  windows.rs
