[package]
name = "appdirs"
version = "0.2.0"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
description = "Rust crate for determining platform-specific directories"
repository = "https://github.com/djc/appdirs-rs"
license = "MIT/Apache-2.0"

[target.'cfg(target_os = "windows")'.dependencies]
ole32-sys = "0.2.0"
shell32-sys = "0.1.1"
winapi = "0.2.8"
